@@ -70,7 +70,7 @@ public class RuntimePathConfig {
         List<String> watchedFoldersDirs = sanitizePathList(pipeline != null ? pipeline.getWatchedFoldersDirs() : null);
         this.pipelineWatchedFoldersPaths = resolveWatchedFolderPaths(
                 defaultWatchedFolders, watchedFoldersDirs, pipeline != null ? pipeline.getWatchedFoldersDir() : null);
-        this.pipelineWatchedFoldersPath = this.pipelineWatchedFoldersPaths.get(0);
+        this.pipelineWatchedFoldersPath = this.pipelineWatchedFoldersPaths.getFirst();
         this.pipelineFinishedFoldersPath =
                 resolvePath(defaultFinishedFolders, pipeline != null ? pipeline.getFinishedFoldersDir() : null);
         this.pipelineDefaultWebUiConfigs =
