@@ -583,7 +583,7 @@ class PDFToFileTest {
                             argThat(args -> args != null && args.contains("/custom/unoconvert"))))
                     .thenAnswer(invocation -> {
                         List<String> args = invocation.getArgument(0);
-                        String outputPath = args.get(args.size() - 1);
+                        String outputPath = args.getLast();
                         Files.write(Path.of(outputPath), "Fake DOCX content".getBytes());
                         return mockExecutorResult;
                     });
