@@ -410,7 +410,7 @@ public class PdfJsonImageService {
         protected void processOperator(Operator operator, List<COSBase> operands) throws IOException {
             if (OperatorName.DRAW_OBJECT.equals(operator.getName())
                     && !operands.isEmpty()
-                    && operands.get(0) instanceof COSName name) {
+                    && operands.getFirst() instanceof COSName name) {
                 currentXObjectName = name;
             }
             super.processOperator(operator, operands);
